# llvm-static

./: CMakeLists.txt  README.md  build-llvm-libs.sh
.github/workflows/: build-llvm.yaml
cmake/: CMakeLists.txt
